fix text-align issue

--- a/apps/fair/stylesheets/overview.styl
+++ b/apps/fair/stylesheets/overview.styl
@@ -175,6 +175,7 @@ left-column-width = 200px
     position: absolute
     top: -(small-section-height)
     right: 0px
+    text-align: left
 
 .fair-overview-curator
 
